results of static analysis